
SUBDIRS = common-libs/mul-lib \
          common-libs/3rd-party/quagga-lib \
          services/loadable/topo_routing \
          mul \
          application/hello \
          application/l2switch \
          application/fabric \
          application/cli \
          application/nbapi/c-swig

DIST_SUBDIRS = common-libs/mul-lib \
               common-libs/3rd-party/quagga-lib \
               services/loadable/topo_routing/ \
               mul \
               application/l2switch \
               application/hello \
               application/fabric \
               application/cli \
               application/nbapi/c-swig

EXTRA_DIST = aclocal.m4

ACLOCAL_AMFLAGS = -I m4
