
SUBDIRS = \
          docs \
          common-libs/mul-lib/ \
          common-libs/util-linux/libuuid \
          common-libs/3rd-party/quagga-lib \
          mul \
          services/loadable/topo_routing \
          services/loadable/conx \
          application/hello \
          application/my_controller \
          application/l2switch \
          application/makdi \
          application/fabric \
          application/cli \
          application/prism/agent/ \
          application/prism/app/ \
          application/nbapi/c-swig\
          application/drone

DIST_SUBDIRS = \
               docs \
               common-libs/mul-lib/ \
               common-libs/3rd-party/quagga-lib \
               common-libs/util-linux/libuuid \
               mul \
               services/loadable/topo_routing/ \
               services/loadable/conx/ \
               application/hello \
               application/my_controller \
               application/l2switch \
               application/makdi \
               application/fabric \
               application/cli \
               application/prism/agent/ \
               application/prism/app/ \
               application/nbapi/c-swig\
               application/drone

EXTRA_DIST = aclocal.m4

ACLOCAL_AMFLAGS = -I m4
